update file attendance-correction